webserver initial changes

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   branch = "master"
-  name = "github.com/dustin/go-humanize"
+  name = "github.com/gorilla/mux"
 
 [prune]
   go-tests = true
